# nag_m1

./: .gitignore  .gitmodules  README.md  index.html  pathset.txt  pyproject.toml
.github/: copilot-instructions.md
config/waymo/final/: segment-14133920963894906769_2_53_large-undistorted.yaml
config/waymo/testing/: W141_53_101_quick.yaml  W141_53_101_small-undistorted.yaml
nag/callbacks/: nag_callback.py
nag/config/: nag_config.py
nag/model/: nag_functional_model.py  view_dependent_image_plane_scene_node_3d.py
nag/run/: nag_runner.py
nag/utils/: utils.py
static/js/: index.js  sync_videos.js
